codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_additional_permissions_macos_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "render_overlay_lines(&view, 120)"
---

  是否执行以下命令？

  原因：need macOS automation

  权限规则：macOS 偏好设置 读写; macOS 自动化 com.apple.Calendar, com.apple.Notes; macOS 辅助功能; macOS
  日历

  $ osascript -e 'tell application'

› 1. 是，继续 (y)
  2. 否，并告诉 Codex 该如何处理 (esc)

  按 enter 确认或按 esc 取消
