codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_cross_thread_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "render_overlay_lines(&view, 80)"
---
  是否执行以下命令？

  会话：Robie [explorer]

  $ echo hi

› 1. 是，继续 (y)
  2. 否，并告诉 Codex 该如何处理 (esc)

  按 enter 确认或按 esc 取消，或按 o 打开会话
