codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_permissions_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "normalize_snapshot_paths(render_overlay_lines(&view, 120))"
---

  是否授予以下权限？

  原因：need workspace access

  权限规则：网络; 读取 `/tmp/readme.txt`; 写入 `/tmp/out.txt`

› 1. 是，授予这些权限 (y)
  2. 是，仅本会话授予这些权限 (a)
  3. 否，继续但不授予权限 (n)

  按 enter 确认或按 esc 取消
