codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__network_exec_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
assertion_line: 821
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 12 },
    content: [
        "                                                                                                    ",
        "  是否允许访问网络主机 "example.com"？                                                                 ",
        "                                                                                                    ",
        "  原因：network request blocked                                                                      ",
        "                                                                                                    ",
        "                                                                                                    ",
        "› 1. 是，仅本次允许 (y)                                                                               ",
        "  2. 是，并允许本会话访问该主机 (a)                                                                  ",
        "  3. 是，并允许将来访问该主机 (p)                                                                    ",
        "  4. 否，并告诉 Codex 该如何处理 (esc)                                                               ",
        "                                                                                                    ",
        "  按 enter 确认或按 esc 取消                                                                          ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 57, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 33, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 53, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 54, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 46, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 51, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
